--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.9'
+version: "3.9"
 services:
   api:
     build: .
     container_name: graph-rag-api
     ports:
-      - '8000:8000'
+      - "8000:8000"
     env_file: .env
     depends_on:
       - postgres
@@ -18,7 +18,7 @@ services:
       POSTGRES_USER: ${PGUSER:-energy}
       POSTGRES_PASSWORD: ${PGPASSWORD:-energy}
     ports:
-      - '5432:5432'
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./scripts/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
@@ -29,8 +29,8 @@ services:
       NEO4J_dbms_security_procedures_unrestricted: algo.*,apoc.*
       NEO4JLABS_PLUGINS: '["apoc"]'
     ports:
-      - '7474:7474'
-      - '7687:7687'
+      - "7474:7474"
+      - "7687:7687"
     volumes:
       - neo4jdata:/data
 volumes:
