--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,28 @@
+# Flask
 FLASK_ENV=development
+FLASK_DEBUG=1
 API_HOST=0.0.0.0
 API_PORT=8000
+
+# OpenAI
 OPENAI_API_KEY=sk-...
-MOCK_OPENAI=1
+MOCK_OPENAI=0
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_TIMEOUT=45
+
+# Neo4j
 NEO4J_URI=bolt://neo4j:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=pleasechangeme
 NEO4J_DB=neo4j
+
+# Postgres/PostGIS
 PGHOST=postgres
 PGPORT=5432
 PGDATABASE=energy
 PGUSER=energy
 PGPASSWORD=energy
+
+# LangChain
 EMBEDDINGS_MODEL=text-embedding-3-small
 VECTOR_DIR=faiss_index
