--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [build-system]
-requires=['setuptools>=68.0']
-build-backend='setuptools.build_meta'
+requires = ["setuptools>=68.0"]
+build-backend = "setuptools.build_meta"
 
 [tool.ruff]
-line-length=100
-select=['E','F','I','UP','B','SIM','PL']
-ignore=['E501']
+line-length = 100
+select = ["E","F","I","UP","B","SIM","PL"]
+ignore = ["E501"]
 
 [tool.mypy]
-python_version='3.11'
-check_untyped_defs=true
-warn_unused_ignores=true
-no_implicit_optional=true
-warn_redundant_casts=true
-warn_return_any=true
-strict_optional=true
+python_version = "3.11"
+check_untyped_defs = true
+warn_unused_ignores = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_return_any = true
+strict_optional = true
